deploy/kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique-prod
  labels:
    gateway.networking.k8s.io/access: public-web

    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

    app.kubernetes.io/part-of: online-boutique
    environment: prod
