deploy/kubernetes/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-http-redirect
spec:
  parentRefs:
    - name: public-web
      namespace: online-boutique-gateway
      sectionName: http
  hostnames:
    - shop.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: public-web
      namespace: online-boutique-gateway
      sectionName: https
  hostnames:
    - shop.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 25s
      backendRefs:
        - name: frontend
          port: 80
